--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-    "ownerNumber": ["6282193115723@s.whatsapp.net","62887435047326@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
+    "ownerNumber": ["62838960550171@s.whatsapp.net","62838960550171@s.whatsapp.net"],
+    "ownerName": "𝙉𝙞𝙯𝙖𝙧𝘽𝙤𝙩𝙯",
+    "instagram" : "https://instagram.com/nizarstoreeeee",
     "gcwa" : "https://instabio.cc/Alphabot",
-    "botName": "Haruka-Mdོ ",
-    "footer": "2023 © api.zeeoneofc.my.id",
+    "botName": "𝙉𝙞𝙯𝙖𝙧𝘽𝙤𝙩𝙯 ",
+    "footer": "2023 © api.𝙉𝙞𝙯𝙖𝙧𝘽𝙤𝙩𝙯.my.id",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
     "pathimg": "./Haruka.jpg",
